# msm-scheduler

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_scripts.sh
msm_scheduler/: README.md  application_http_request_handler.py  availability.py  driver.py  routes.py  schedule.py  serve.py  test.py  test_old.py
msm_scheduler/constants/: boss.py  config.py  gapi.py  player.py
msm_scheduler/core/: base_teams.py  boss_effectiveness.py  boss_effectiveness_params.npz  boss_players.py  clean_data.py  config.py  create_teams.py  database.py  gapi.py  import_base_teams.py  import_bosses.py  import_data.py  import_player_availabilities.py  import_player_availability.py  import_player_data.py  import_player_experiences.py  import_players.py  players_builder.py  schedule.py  team_clear_prbs.npz  team_clear_prbs.py  team_roles.py  teams_scheduler.py
msm_scheduler/core/importers/: file.py  google_spreadsheet.py
msm_scheduler/core/transformers/: csv_to_base_teams.py  csv_to_bosses.py  csv_to_player_availabilities.py  csv_to_player_discord_ids.py  csv_to_player_interests.py  csv_to_player_player_experiences.py  csv_to_players.py  (+2 more)
msm_scheduler/data/: bosses.csv
msm_scheduler/lib/: intersect_segments.py  logger.py  simple_http_request_handler.py  time_utils.py
msm_scheduler/models/: __init__.py  boss.py  player.py  role_config.py  team.py
msm_scheduler/tests/: csv_test.py  google_spreadsheet_test.py  sanity_test.py  test_boss_effectiveness_model.py  test_clr_prbs.py
msm_scheduler/types/: __init__.py  boss.py  player.py  team.py
(+5 files in other folders)
